--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord_bot",
-  "type":"module",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "super bot coaché par bylo mais marie veut une dédicace",
   "main": "index.js",
@@ -12,10 +12,11 @@
   "dependencies": {
     "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^1.0.1",
-    "@discordjs/voice": "^0.11.0",
+    "@discordjs/voice": "github:discordjs/voice",
     "axios": "^0.27.2",
     "discord-music-player": "^9.0.2",
     "discord-player": "^5.2.2",
-    "discord.js": "^14.1.1"
+    "discord.js": "^14.1.1",
+    "ffmpeg-static": "^5.0.2"
   }
 }
