--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord-music-player": "^9.0.2",
     "discord-player": "^5.2.2",
     "discord.js": "^14.1.1",
-    "ffmpeg-static": "^5.0.2"
+    "ffmpeg-static": "^5.0.2",
+    "ytdl-core": "^4.11.2"
   }
 }
